outputs/main/reevo_bpp_online_2025-07-25_23-32-46/problem_iter1_response26.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 38
    if __name__ == '__main__":
                   ^
SyntaxError: unterminated string literal (detected at line 38)
12
4
